--- a/uc-service/build.gradle
+++ b/uc-service/build.gradle
@@ -93,4 +93,11 @@ dependencies {
     testCompile "com.h2database:h2"
     optional "org.springframework.boot:spring-boot-configuration-processor:${spring_boot_version}"
     //jhipster-needle-gradle-dependency - JHipster will add additional dependencies here
+
+    compile("com.alibaba:dubbo:2.8.4")
+    compile("org.apache.zookeeper:zookeeper:3.4.6")
+    compile("com.github.sgroschupf:zkclient:0.1")
+    compile("com.alibaba:fastjson:1.2.13")
+
+    compile project(":uc-api")
 }
