--- a/uc-service/build.gradle
+++ b/uc-service/build.gradle
@@ -76,6 +76,15 @@ dependencies {
     }
 
     compile "mysql:mysql-connector-java"
+
+    compile("org.mybatis:mybatis:3.4.1")
+    compile("org.mybatis:mybatis-spring:1.3.0")
+
+    compile("com.alibaba:druid:1.0.23")
+    compile("com.dangdang:sharding-jdbc-core:1.3.1")
+    compile("com.dangdang:sharding-jdbc-config-spring:1.3.1")
+
+
     compile "fr.ippon.spark.metrics:metrics-spark-reporter:${metrics_spark_reporter_version}"
     compile "org.mapstruct:mapstruct-jdk8:${mapstruct_version}"
     testCompile "com.jayway.awaitility:awaitility:${awaility_version}"
