--- a/uc-service/src/main/resources/config/application-dev.yml
+++ b/uc-service/src/main/resources/config/application-dev.yml
@@ -30,18 +30,18 @@ spring:
             enabled: false # we use gulp + BrowserSync for livereload
     jackson:
         serialization.indent_output: true
-    datasource:
-        type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:mysql://localhost:3306/seuaa?useUnicode=true&characterEncoding=utf8&useSSL=false
-        name:
-        username: root
-        password: root
-        hikari:
-            data-source-properties:
-                cachePrepStmts: true
-                prepStmtCacheSize: 250
-                prepStmtCacheSqlLimit: 2048
-                useServerPrepStmts: true
+#    datasource:
+#        type: com.zaxxer.hikari.HikariDataSource
+#        url: jdbc:mysql://localhost:3306/seuaa?useUnicode=true&characterEncoding=utf8&useSSL=false
+#        name:
+#        username: root
+#        password: root
+#        hikari:
+#            data-source-properties:
+#                cachePrepStmts: true
+#                prepStmtCacheSize: 250
+#                prepStmtCacheSqlLimit: 2048
+#                useServerPrepStmts: true
     jpa:
         database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
         database: MYSQL
