--- a/uc-service/src/main/resources/application.properties
+++ b/uc-service/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 # 主数据源，默认的
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ds_1?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/seuaa?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -37,7 +37,7 @@ spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowS
 #slave datasource
 spring.datasource.slave.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.slave.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.slave.url=jdbc:mysql://localhost:3306/ds_0?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.slave.url=jdbc:mysql://localhost:3306/seuaa?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.slave.username=root
 spring.datasource.slave.password=root
 
